Adjust hero image width

--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -1,7 +1,7 @@
 @import "../../../styles/settings/mixins";
 
 .heroImage {
-  width: 100vw;
+  width: 100%;
   padding: unset;
   height: 30vw;
   overflow: hidden;
