text grid with media, add wrapper to non-link text items, add height class if itemImageFullSizeWidth

--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -245,3 +245,8 @@
 .justifyContentCenterHorizontally {
   justify-content: center !important;
 }
+
+.textItemFullHeight {
+  height: 100%;
+  display: inline-block;
+}
