--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -229,7 +229,7 @@
     padding: 0 0 1.5rem 0 !important;
     .textItemMedia {
       max-width: 100%;
-      height: 12.5rem;
+      // height: 12.5rem;
       & > span:only-child img {
         object-fit: cover;
         min-height: 100% !important;
