Add 1st version of secondary nav component

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -25,7 +25,9 @@
       background: transparent;
     }
   }
-
+  &.mobileNavActive {
+    z-index: 5;
+  }
   @include desktop() {
     padding-top: 0;
     display: flex;
