--- a/components/agility-pageModules/infographic/infographic.module.scss
+++ b/components/agility-pageModules/infographic/infographic.module.scss
@@ -120,9 +120,10 @@
         .itemTextContent {
           justify-content: flex-start;
           .itemTitle {
-            font-size: 3.75rem;
+            font-size: 5rem;
             margin-bottom: 1rem;
             text-align: center;
+            line-height: 1.2;
           }
           .itemTitle,
           .itemDefinition,
@@ -177,6 +178,7 @@
         @include shadow();
         padding: 2rem;
         margin: 0 0.5rem;
+        border-right: 0;
       }
 
       > * {
@@ -216,6 +218,9 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
+        &.align-items-center {
+          align-items: center;
+        }
         .itemDescription {
           color: $color-darkblue;
           font-weight: 600;
