adjusted name alignment

--- a/components/agility-pageModules/testimonialList/testimonialList.module.scss
+++ b/components/agility-pageModules/testimonialList/testimonialList.module.scss
@@ -262,6 +262,7 @@
       .gridItemName {
         padding-top: 1.5rem;
         margin-top: auto;
+        text-align: center;
       }
       .gridItemText,
       .gridItemName {
