added circular image option to first fold

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -27,6 +27,9 @@
       align-items: center;
     }
   }
+  .circularImage {
+    border-radius: 50%;
+  }
   .heading {
     max-width: 37.5rem;
     margin-top: 1rem;
