updated image display logic for testimonial list

--- a/components/agility-pageModules/testimonialList/testimonialList.module.scss
+++ b/components/agility-pageModules/testimonialList/testimonialList.module.scss
@@ -250,6 +250,7 @@
       }
       .gridItemLogoContainer {
         position: relative;
+        margin-bottom: 0.5rem;
         .gridItemLogo {
           height: 100% !important;
         }
