--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -108,6 +108,12 @@
     &.mediaBasis70 {
       flex-basis: 70%;
     }
+    &.mediaTop {
+      justify-self: flex-start;
+    }
+    &.mediaBottom {
+      justify-self: flex-end;
+    }
     @include desktop() {
       &.defaultLayoutFixedHeight400 {
         max-height: 25rem;
@@ -120,6 +126,14 @@
       }
       &.defaultLayoutFixedHeight700 {
         max-height: 43.75em;
+      }
+      &.mediaTop {
+        justify-self: unset;
+        align-self: flex-start;
+      }
+      &.mediaBottom {
+        justify-self: unset;
+        align-self: flex-end;
       }
     }
   }
