--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -2,6 +2,8 @@
 @import "../../../styles/settings/colors";
 
 .textGridWithMedia {
+  $smaller-gap: 1rem;
+  $larger-gap: 2rem;
   .heading {
     display: flex;
     justify-content: center;
@@ -26,8 +28,6 @@
     align-items: center;
     justify-content: center;
     .grid {
-      $smaller-gap: 1rem;
-      $larger-gap: 2rem;
       gap: $smaller-gap;
       &.hasLargerGap {
         gap: $larger-gap;
@@ -108,6 +108,9 @@
   .textItem {
     display: flex;
     padding: 1.5rem;
+    height: 100%;
+  }
+  .textItem:not(.logoLeftHeaderRight){
     .textItemMedia {
       max-width: 7.5rem;
       min-height: 4.5rem;
@@ -159,81 +162,82 @@
   .textItemHeading {
     margin-bottom: 0.625rem;
   }
-}
-.textItemContentWrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-.logoLeftHeaderRight {
-  .content {
-    line-height: 1.3rem;
-    align-items: stretch;
-    .grid {
-      > .gridItem {
-        padding: 0;
-      }
-      margin-top: 0 !important;
-      gap: 0;
-      display: grid;
-      grid-template-columns: 1fr;
-      @media (min-width: 25.5rem) {
-        grid-template-columns: 1fr 1fr;
-      }
-      @include desktop() {
-        display: flex;
-        gap: 0.7rem;
-        .gridItem .gridItem {
-          padding: 1.5rem 0 !important;
+  .textItemContentWrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+  &.logoLeftHeaderRight {
+    align-items: center;
+    .content {
+      line-height: 1.3rem;
+      align-items: stretch;
+      .grid {
+        margin-top: 0 !important;
+        grid-gap: 0;
+        display: grid;
+        grid-template-columns: 1fr;
+        @media (min-width: 25.5rem) {
+          grid-template-columns: 1fr 1fr;
+        }
+        @include desktop() {
+          display: flex;
+          gap: $smaller-gap;
+          &.hasLargerGap {
+            gap: $larger-gap;
+          }
         }
       }
     }
-  }
-  align-items: center;
-  .textItemHeading {
-    width: 100%;
-  }
-  .textItemMedia {
-    width: 2rem !important;
-    min-width: auto !important;
-    margin-right: 0.8rem !important;
-    min-height: 0 !important;
-    & > span:only-child {
-      min-height: 0 !important;
-    }
-    & > * {
-      font-size: 1rem;
-    }
-  }
-  .textItemHeading > * {
-    font-size: 1rem;
-  }
-}
-.imageFullWidth {
-  .textItem {
-    flex: auto;
-  }
-}
-.imageFullWidth {
-  &.textItem {
-    overflow: hidden;
-    padding: 0 0 1.5rem 0 !important;
-    .textItemMedia {
-      max-width: 100%;
-      // height: 12.5rem;
-      & > span:only-child img {
-        object-fit: cover;
-        min-height: 100% !important;
+
+    .textItem {
+      .textItemMedia {
+        align-self: center;
+        height: initial !important;
+        width: 2rem;
+        margin-right: 0.8rem !important;
+          img {
+            height: initial !important;
+            position: unset !important;
+          }
+        & > * {
+          font-size: 1rem;
+        }
+        @include desktop() {
+          width: initial;
+          flex: 1 0 1.6875rem;
+        }
+      }
+      .textItemHeading {
+        width: 100%;
+      }
+      .textItemHeading > * {
+        font-size: 1rem;
+      }
+      @include desktop() {
+        padding: 1.5rem 0;
       }
     }
-    .content,
-    span.rightArrow {
-      padding: 0 1.5rem;
+  }
+  .imageFullWidth {
+      flex: auto;
+  }
+  .imageFullWidth {
+    &.textItem {
+      overflow: hidden;
+      padding: 0 0 1.5rem 0 !important;
+      .textItemMedia {
+        max-width: 100%;
+        // height: 12.5rem;
+        & > span:only-child img {
+          object-fit: cover;
+          min-height: 100% !important;
+        }
+      }
+      .content,
+      span.rightArrow {
+        padding: 0 1.5rem;
+      }
     }
   }
-}
-
-.textItemFullHeight {
-  height: 100%;
-  display: inline-block;
 }
