--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -109,30 +109,15 @@
     display: flex;
     padding: 1.5rem;
     height: 100%;
+    overflow: hidden;
   }
-  .textItem:not(.logoLeftHeaderRight){
+  .textItem:not(.logoLeftHeaderRight) {
     .textItemMedia {
       max-width: 7.5rem;
-      min-height: 4.5rem;
-      &.textItemMediaLarge {
-        height: 14rem;
-        & > span {
-          height: 100% !important;
-        }
-      }
-      &.textItemMediaSmall {
-        max-width: 5.625rem;
-        max-height: 5.625rem;
-        & > span {
-          &:only-child {
-            min-width: 5.625rem;
-            min-height: 5.625rem;
-          }
-        }
-      }
+      height: 7.5rem;
       & > span {
         &:only-child {
-          min-height: 7.5rem;
+          height: 100% !important;
           img {
             margin: 0 !important;
             width: 100% !important;
@@ -143,19 +128,43 @@
         }
       }
       &.textItemMediaTop {
-        padding-bottom: 1rem;
         > span:only-child {
-          min-width: 7.5rem;
-        }
-      }
-      &.textItemMediaVerticalCenter {
-        span {
           display: flex !important;
           align-items: center !important;
           img {
             position: relative !important;
           }
         }
+      }
+    }
+    &:not(.textItemWithSmallMedia):not(.textItemWithLargeMedia) {
+      .textItemMedia {
+        margin-bottom: 1.5rem;
+      }
+    }
+    &.textItemWithLargeMedia {
+      padding: 0;
+      .textItemMedia {
+        height: 14rem;
+        overflow: hidden;
+        max-width: 100%;
+        & > span:only-child img {
+          object-fit: cover;
+          min-height: 100% !important;
+        }
+        .content,
+        span.rightArrow {
+          padding: 0 1.5rem;
+        }
+      }
+      .textItemTextContent {
+        padding: 1.5rem;
+      }
+    }
+    &.textItemWithSmallMedia {
+      .textItemMedia {
+        max-width: 5.625rem;
+        height: 5.625rem;
       }
     }
   }
@@ -168,7 +177,6 @@
     gap: 0.5rem;
   }
   &.logoLeftHeaderRight {
-    align-items: center;
     .content {
       line-height: 1.3rem;
       align-items: stretch;
@@ -189,23 +197,22 @@
         }
       }
     }
-
     .textItem {
       .textItemMedia {
         align-self: center;
         height: initial !important;
-        width: 2rem;
+        flex: 1 0 1.75rem;
         margin-right: 0.8rem !important;
+        img {
+          height: initial !important;
+        }
+        &.textItemSvgMedia {
           img {
-            height: initial !important;
             position: unset !important;
           }
+        }
         & > * {
           font-size: 1rem;
-        }
-        @include desktop() {
-          width: initial;
-          flex: 1 0 1.6875rem;
         }
       }
       .textItemHeading {
@@ -216,27 +223,6 @@
       }
       @include desktop() {
         padding: 1.5rem 0;
-      }
-    }
-  }
-  .imageFullWidth {
-      flex: auto;
-  }
-  .imageFullWidth {
-    &.textItem {
-      overflow: hidden;
-      padding: 0 0 1.5rem 0 !important;
-      .textItemMedia {
-        max-width: 100%;
-        // height: 12.5rem;
-        & > span:only-child img {
-          object-fit: cover;
-          min-height: 100% !important;
-        }
-      }
-      .content,
-      span.rightArrow {
-        padding: 0 1.5rem;
       }
     }
   }
