--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -411,12 +411,19 @@
 }
 
 .logoGridColumns {
-  justify-content: unset;
+  justify-content: space-between;
   .logoGridColumn {
+    flex: 0 0 50%;
     padding: 1.75rem;
+    height: 7.5rem;
+    > span {
+      height: 100% !important;
+      img {
+        object-fit: contain;
+      }
+    }
     @include desktop() {
       padding: 0.5rem;
-      margin-right: 0.5rem;
     }
   }
 }
