Fix AwardsBanner SVG issue, add SVG util function

--- a/components/agility-pageModules/awardsBanner/awardsBanner.module.scss
+++ b/components/agility-pageModules/awardsBanner/awardsBanner.module.scss
@@ -83,6 +83,9 @@
             }
           }
         }
+        &.awardImageSvg > span img {
+            position: relative !important;
+        }
       }
     }
     @include desktop() {
