--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -16,6 +16,9 @@
   background: white;
   &.scrolled {
     box-shadow: 0 0 0.5rem 0 #0000005b;
+    .navbarSecondary_navbarSecondary__4kmav {
+      display: none;
+    }
   }
 
   &.transparent {
@@ -30,7 +33,7 @@
   }
   @include desktop() {
     padding-top: 0;
-    display: flex;
+    /* display: flex; */
     position: sticky;
     top: 0;
   }
@@ -280,7 +283,8 @@
 
   // Triangle
   &:not(.disabled) {
-    &:hover, &:focus-within {
+    &:hover,
+    &:focus-within {
       @include desktop() {
         &::before {
           position: absolute;
@@ -346,7 +350,6 @@
 
       & > ul {
         padding-bottom: 0;
-
       }
 
       &:first-child {
@@ -363,7 +366,7 @@
   max-height: 100vh;
   width: 100%;
   position: relative;
-  @include desktop () {
+  @include desktop() {
     overflow: unset;
     height: unset;
     max-height: unset;
@@ -373,14 +376,13 @@
 }
 
 .mainNavigationContainerClosed {
-    max-height: unset;
-    height: unset;
+  max-height: unset;
+  height: unset;
 }
 
 .mainNavigationContainerActive {
-  
   overflow-y: scroll;
-  @include desktop () {
+  @include desktop() {
     overflow-y: unset;
   }
 }
