--- a/components/layout/navbarSecondary/navbarSecondary.module.scss
+++ b/components/layout/navbarSecondary/navbarSecondary.module.scss
@@ -4,10 +4,20 @@
 @import "../../../styles/settings/variables";
 
 .navbarSecondary {
-  margin-top: toRem(10);
-  justify-content: flex-end !important;
-  a,
-  p {
-    font-size: toRem(14);
+  display: none;
+  @include desktop() {
+    margin-top: toRem(10);
+    justify-content: flex-end !important;
+    grid-gap: 1rem;
+    * {
+      font-size: toRem(14);
+    }
+    a {
+      display: block;
+      padding: 0.5rem 0;
+      &:hover {
+        color: $color-darkblue;
+      }
+    }
   }
 }
