--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -5,7 +5,26 @@
   padding: unset;
   height: 30vw;
   overflow: hidden;
+  position: relative;
+  display: flex;
+  align-items: center;
+  .overlayText {
+    position: relative;
+    color: #fff;
+    z-index: 2;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 1rem;
+  }
   & > span {
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
     &:only-child {
       position: absolute;
       top: 0;
