TextWithForm boolean field changes, form left fix

--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -97,6 +97,9 @@
     }
     @include desktop() {
       flex-direction: row;
+      &.formLeft {
+        flex-direction: row-reverse;
+      }
       .columnLayoutHeading {
         display: none;
       }
