--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -206,6 +206,9 @@
     @include tablet() {
       // default is six columns
       flex: 0 0 calc(16.6667% - 0.5rem);
+      &.is-1 {
+        flex-basis: 100%;
+      }
       &.is-2 {
         flex: 0 0 calc(50% - 0.5rem);
       }
