--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -416,9 +416,8 @@
 .logoGridColumns {
   justify-content: space-between;
   .logoGridColumn {
-    flex: 0 0 50%;
-    padding: 1.75rem;
-    height: 7.5rem;
+    padding: .5rem;
+    height: 5rem;
     > span {
       height: 100% !important;
       img {
@@ -426,7 +425,7 @@
       }
     }
     @include desktop() {
-      padding: 0.5rem;
+      padding: .25rem;
     }
   }
 }
