Fix transparent navbar white background issue

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -332,8 +332,8 @@
   @include desktop() {
     padding: unset !important;
     position: relative;
-    padding-top: $navbar-height !important;
-    top: -$navbar-height;
+    padding-top: calc($navbar-height + $navbar-secondary-height) !important;
+    top: 0 - $navbar-height - $navbar-secondary-height;
   }
 }
 
