--- a/components/layout/navbarSecondary/navbarSecondary.module.scss
+++ b/components/layout/navbarSecondary/navbarSecondary.module.scss
@@ -6,7 +6,7 @@
 .navbarSecondary {
   display: none;
   @include desktop() {
-    margin-top: toRem(10);
+    height: $navbar-secondary-height;
     justify-content: flex-end !important;
     grid-gap: 1rem;
     * {
@@ -15,6 +15,7 @@
     a {
       display: block;
       padding: 0.5rem 0;
+      margin-top: toRem(10);
       &:hover {
         color: $color-darkblue;
       }
