Add max-height helper class

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -631,3 +631,11 @@
 .max-width-unset {
   max-width: unset;
 }
+
+/*
+<<<<<<<<<<<<<<<<HEIGHT HELPER CLASSES>>>>>>>>>>>>>>>>>
+*/
+
+.max-height-size-6 {
+  max-height: $size-6;
+}
