--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -187,7 +187,7 @@
 
 // alternate layout: image as a background image, text content centered
 .firstFoldAlternate {
-  width: 100vw;
+  width: 100%;
   padding: unset;
   height: 100%;
   min-height: 18.75rem;
@@ -304,7 +304,7 @@
 
 // alternate layout: image as a background image, text content centered
 .softwareIntegration {
-  width: 100vw;
+  width: 100%;
   padding: unset;
   height: 100%;
   padding: 2rem 1rem;
