--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -10,6 +10,7 @@ $color-white: #ffffff;
 $color-gray: #999999;
 $color-darkgray: #777;
 $color-darkmedium: #bbb;
+$color-darkmediumgray: #bbb;
 $color-mediumgray: #e5e5e5;
 $color-lightgray: #f6f6f6;
 $color-red: #ff0000; // Use for Error messages and Error selectors
