--- a/components/agility-pageModules/heroImage/heroImage.module.scss
+++ b/components/agility-pageModules/heroImage/heroImage.module.scss
@@ -22,7 +22,8 @@
     position: absolute !important;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 100% !important;
+    min-height: 100%;
     height: 100%;
     z-index: 1;
     &:only-child {
