--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -155,6 +155,15 @@ h6,
 .text-28px {
   font-size: toRem(28) !important;
 }
+.text-24px {
+  font-size: toRem(24) !important;
+}
+.text-22px {
+  font-size: toRem(22) !important;
+}
+.text-20px {
+  font-size: toRem(20) !important;
+}
 .text-14px {
   font-size: toRem(14);
 }
