--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -1,6 +1,7 @@
 @import "../settings/_mixins";
 
 $card-image-height: toRem(170);
+$card-tall-image-height: toRem(270);
 $card-border-radius: 1rem;
 $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
 
@@ -19,6 +20,12 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
     min-height: 18.75rem;
     justify-content: flex-start;
     width: 100%;
+    &--tall {
+      height: 62.5vh;
+      .loadingTextContent {
+        gap: .5rem;
+      }
+    }
     .loadingImageField {
       justify-self: flex-start;
       flex: 0 0 $card-image-height;
@@ -26,6 +33,9 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
       overflow: hidden;
       border-top-left-radius: $card-border-radius;
       border-top-right-radius: $card-border-radius;
+      &--tall {
+        flex: 0 0 $card-tall-image-height;
+      }
     }
     .loadingTextContent {
       flex: 1 1 100%;
@@ -113,7 +123,11 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
       & > span {
         &:only-child {
           height: 100% !important;
+          width: 100% !important;
         }
+      }
+      &--tall {
+        height: $card-tall-image-height;
       }
     }
     &__textContent {
@@ -137,6 +151,11 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
         font-size: 1rem;
         line-height: 1.2;
         padding: 0.75rem 1.5rem 0 1.5rem;
+      }
+      &--titleEmphasized {
+        font-size: 1.5rem;
+        font-weight: 600;
+        padding-top: 2rem;
       }
       &--description {
         padding: 1rem 1.5rem 0 1.5rem;
