--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -23,7 +23,7 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
     &--tall {
       height: 62.5vh;
       .loadingTextContent {
-        gap: .5rem;
+        gap: 0.5rem;
       }
     }
     .loadingImageField {
@@ -83,6 +83,7 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
 }
 
 .genericCardWrapper {
+  height: 100%;
   @supports #{"\selector(*:focus-visible)"} {
     &:not(:focus-visible) {
       .genericCard {
@@ -114,9 +115,15 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
   }
   .genericCard {
     height: 100%;
+    &__image,
+    &__titleWithIcon {
+      height: $card-image-height;
+      &--tall {
+        height: $card-tall-image-height;
+      }
+    }
     &__image {
       background: $color-gray;
-      height: $card-image-height;
       overflow: hidden;
       border-top-left-radius: $card-border-radius;
       border-top-right-radius: $card-border-radius;
@@ -125,9 +132,6 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
           height: 100% !important;
           width: 100% !important;
         }
-      }
-      &--tall {
-        height: $card-tall-image-height;
       }
     }
     &__textContent {
@@ -197,6 +201,25 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
             border-width: 0.15rem;
             border-color: $color-darkblue;
             transform: rotate(45deg);
+          }
+        }
+      }
+    }
+    &__titleWithIcon {
+      padding: 0 1.5rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.75rem;
+      &--icon {
+        height: 100%;
+        border-radius: 0;
+        background-color: transparent;
+        flex: 0 0 40%;
+        > span {
+          height: 100% !important;
+          img {
+            object-fit: contain !important;
           }
         }
       }
