--- a/components/agility-pageModules/resourceList/resourceList.module.scss
+++ b/components/agility-pageModules/resourceList/resourceList.module.scss
@@ -2,18 +2,14 @@
 @import "../../../styles/settings/colors";
 
 .resourceList {
-
   .heading {
     padding: 2rem 0;
     margin: 3rem 0 1rem 0;
     text-align: center;
-
   }
   .resources {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    justify-items: center;
     gap: 1rem;
     .resource {
       width: 90vw;
@@ -24,7 +20,6 @@
       }
     }
     @include desktop() {
-      display: grid;
       gap: 2rem;
       width: 100%;
       grid-template-columns: repeat(3, 1fr);
