GenericCard padding adjustments

--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -149,7 +149,7 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
         color: $color-black;
         font-size: 1rem;
         font-weight: 600;
-        padding: 1rem 1.5rem 0 1.5rem;
+        padding: .75rem 1.5rem 0 1.5rem;
       }
       &--title {
         font-size: 1.1rem;
