--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -149,7 +149,7 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
         color: $color-black;
         font-size: 1rem;
         font-weight: 600;
-        padding: .75rem 1.5rem 0 1.5rem;
+        padding: 0.75rem 1.5rem 0 1.5rem;
       }
       &--title {
         font-size: 1.1rem;
@@ -211,12 +211,12 @@ $card-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 0.75rem;
       &--icon {
         height: 100%;
         border-radius: 0;
         background-color: transparent;
         flex: 0 0 40%;
+        margin-right: 0.75rem;
         > span {
           height: 100% !important;
           img {
